# new_type_for_cpp

./: CHANGELOG.md  LICENSE  README.md
include/new_type/: new_type.hpp
test/: .gitignore  CMakeLists.txt
test/src/: new_type_test.cpp
